Feedback pipeline to get multiple posts from cache in one request